--- a/project.euler/project.euler.vcxproj.filters
+++ b/project.euler/project.euler.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="problem2.c">
+    <ClCompile Include="003.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
