--- a/project.euler/project.euler.vcxproj
+++ b/project.euler/project.euler.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="003.c" />
+    <ClCompile Include="problem4.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
